# Evm-Simulation

./: Cargo.toml
contract/: SwapHelper.sol
foundry_test/src/: PancakeV2SwapExamples.sol  UniswapV2SwapExamples.sol
foundry_test/src/interfaces/: IERC20.sol  IUniswapV2Router.sol  IWETH.sol
foundry_test/test/: pancakeV2.t.sol  uniswapV2.t.sol
src/: debug_trace.rs  fund_wallet.rs  lib.rs  main.rs  simulate.rs
