[package]
name = "evm_simulation"
version = "0.1.0"
edition = "2021"

[dependencies]
alloy = { version = "0.7.3", features = ["full", "node-bindings", "provider-anvil-node", "provider-trace-api", "provider-debug-api", "signer-mnemonic", "signer-mnemonic-all-languages"] }
#alloy-provider = { version = "0.7.3", features = ["debug-api"] }
anyhow = "1.0.94"
dotenv = "0.15.0"
#loom-node-debug-provider = { git = "https://github.com/dexloom/loom/", version = "0.4.0" }
tokio = { version = "1.0.0", features = ["rt", "rt-multi-thread", "macros", "full"] }
